--- a/exteriores.html
+++ b/exteriores.html
@@ -33,52 +33,17 @@
     <title>En esta tierra - Villa Gesell</title>
   </head>
   <body>
-    <nav class="navbar2">
-      <div class="container">
-        <div class="navbar__logo">
-          <p class="navbar__title">
-            <img id="logo" src="img/logo2.png" />
-          </p>
-        </div>
-        <div class="navbar__menu">
-          <i class="fas fa-bars"></i>
-        </div>
-        <ul class="navbar__links">
-          <li class="navbar__link active" data-ref="home">
-            <a href="index.html">Inicio</a>
-          </li>
-
-          <li class="navbar__link" data-ref="contact">
-            <a href="#contact">Contacto</a>
-          </li>
-          <!-- <li>
-            <a
-              class="fa-brands fa-instagram navbar__link"
-              href="https://www.instagram.com/en_esta_tierra/"
-            >
-            </a>
-          </li> -->
-          <li>
-            <a
-              href="https://api.whatsapp.com/send?phone=+5491160921219&text=Hola!%20quisiera%20mas%20informacion%20para alquilar."
-              target="_blank"
-            >
-              <div class="navbar__link">
-                <i class="fa-brands fa-whatsapp"></i>
-              </div>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
     <section id="portfolio">
       <div class="container">
-        <h2 class="section__title">Fotos</h2>
-        <h3 class="section__subtitle">
-          Algunas fotos del exterior del complejo, para ver mas podes seguirnos
-          en Instagram.
-        </h3>
+        <div class="section__header">
+          <h2 class="section__title">Fotos</h2>
+          <h3 class="section__subtitle__fotos">
+            Fotos del exterior del complejo.
+          </h3>
+          <a href="index.html" class="back-button">
+            <i class="fas fa-arrow-left"></i> Volver al inicio
+          </a>
+        </div>
         <div class="portfolio__grid">
           <div class="portfolio__item">
             <a class="view" href="img/foto1.jpg">
@@ -235,12 +200,12 @@
           </a>
         </div>
       </div>
-      <div class="about__logo"><img src="img/logo.png" /></div>
+      <img src="img/logo.jpg" alt="Logo En esta tierra" class="section-separator-logo">
     </section>
     <footer class="footer">
       <div class="container">
         <p>
-          Copyright © 2021. <a href="#">MA Design</a> <br />
+          Copyright © 2025. <a href="#">MA Design</a> <br />
           All Rights Reserved
         </p>
       </div>
