--- a/interiores.html
+++ b/interiores.html
@@ -33,83 +33,68 @@
     <title>En esta tierra - Villa Gesell</title>
   </head>
   <body>
-    <nav class="navbar2">
-      <div class="container">
-        <div class="navbar__logo">
-          <p class="navbar__title">
-            <img id="logo" src="img/logo2.png" />
-          </p>
-        </div>
-        <div class="navbar__menu">
-          <i class="fas fa-bars"></i>
-        </div>
-        <ul class="navbar__links">
-          <li class="navbar__link active" data-ref="home">
-            <a href="index.html">Inicio</a>
-          </li>
-
-          <li class="navbar__link" data-ref="contact">
-            <a href="#contact">Contacto</a>
-          </li>
-          <!-- <li>
-            <a
-              class="fa-brands fa-instagram navbar__link"
-              href="https://www.instagram.com/en_esta_tierra/"
-            >
-            </a>
-          </li> -->
-          <li>
-            <a
-              href="https://api.whatsapp.com/send?phone=+5491160921219&text=Hola!%20quisiera%20mas%20informacion%20para alquilar."
-              target="_blank"
-            >
-              <div class="navbar__link">
-                <i class="fa-brands fa-whatsapp"></i>
-              </div>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
     <section id="portfolio">
       <div class="container">
-        <h2 class="section__title">Fotos</h2>
-
-        <h3 class="section__subtitle__fotos">
-          Fotos de interiores de algunos de nuestros departamentos.
-        </h3>
-        <div class="popup-gallery">
-          <a href="img/int1.jpg"
-            ><img src="img/int1.jpg" width="300" height="300"
-          /></a>
-          <a href="img/int2.jpg"
-            ><img src="img/int2.jpg" width="300" height="300"
-          /></a>
-          <a href="img/int3.jpg"
-            ><img src="img/int3.jpg" width="300" height="300"
-          /></a>
-          <a href="img/int4.jpg"
-            ><img src="img/int4.jpg" width="300" height="300"
-          /></a>
-          <a href="img/int5.jpg"
-            ><img src="img/int5.jpg" width="300" height="300"
-          /></a>
-          <a href="img/int6.jpg"
-            ><img src="img/int6.jpg" width="300" height="300"
-          /></a>
-          <a href="img/int7.jpg"
-            ><img src="img/int7.jpg" width="300" height="300"
-          /></a>
-          <a href="img/int8.jpg"
-            ><img src="img/int8.jpg" width="300" height="300"
-          /></a>
-          <a href="img/int9.jpg"
-            ><img src="img/int9.jpg" width="300" height="300"
-          /></a>
-          <a href="img/int10.jpg"
-            ><img src="img/int10.jpg" width="300" height="300"
-          /></a>
+        <div class="section__header">
+          <h2 class="section__title">Fotos</h2>
+          <h3 class="section__subtitle__fotos">
+            Fotos de interiores de algunos de nuestros departamentos.
+          </h3>
+          <a href="index.html" class="back-button">
+            <i class="fas fa-arrow-left"></i> Volver al inicio
+          </a>
+        </div>
+        <div class="portfolio__grid">
+          <div class="portfolio__item">
+            <a class="view" href="img/int1.jpg">
+              <img class="portfolio__img" alt="portfolio item" src="img/int1.jpg" />
+            </a>
+          </div>
+          <div class="portfolio__item">
+            <a class="view" href="img/int2.jpg">
+              <img class="portfolio__img" alt="portfolio item" src="img/int2.jpg" />
+            </a>
+          </div>
+          <div class="portfolio__item">
+            <a class="view" href="img/int3.jpg">
+              <img class="portfolio__img" alt="portfolio item" src="img/int3.jpg" />
+            </a>
+          </div>
+          <div class="portfolio__item">
+            <a class="view" href="img/int4.jpg">
+              <img class="portfolio__img" alt="portfolio item" src="img/int4.jpg" />
+            </a>
+          </div>
+          <div class="portfolio__item">
+            <a class="view" href="img/int5.jpg">
+              <img class="portfolio__img" alt="portfolio item" src="img/int5.jpg" />
+            </a>
+          </div>
+          <div class="portfolio__item">
+            <a class="view" href="img/int6.jpg">
+              <img class="portfolio__img" alt="portfolio item" src="img/int6.jpg" />
+            </a>
+          </div>
+          <div class="portfolio__item">
+            <a class="view" href="img/int7.jpg">
+              <img class="portfolio__img" alt="portfolio item" src="img/int7.jpg" />
+            </a>
+          </div>
+          <div class="portfolio__item">
+            <a class="view" href="img/int8.jpg">
+              <img class="portfolio__img" alt="portfolio item" src="img/int8.jpg" />
+            </a>
+          </div>
+          <div class="portfolio__item">
+            <a class="view" href="img/int9.jpg">
+              <img class="portfolio__img" alt="portfolio item" src="img/int9.jpg" />
+            </a>
+          </div>
+          <div class="portfolio__item">
+            <a class="view" href="img/int10.jpg">
+              <img class="portfolio__img" alt="portfolio item" src="img/int10.jpg" />
+            </a>
+          </div>
         </div>
       </div>
     </section>
@@ -157,13 +142,13 @@
           </a>
         </div>
       </div>
-      <div class="about__logo"><img src="img/logo.png" /></div>
+      <img src="img/logo.jpg" alt="Logo En esta tierra" class="section-separator-logo">
     </section>
 
     <footer class="footer">
       <div class="container">
         <p>
-          Copyright © 2021. <a href="#">MA Design</a> <br />
+          Copyright © 2025. <a href="#">MA Design</a> <br />
           All Rights Reserved
         </p>
       </div>
